完成【发现】页面卡片封面图片显示以及动画

--- a/mia/Base.lproj/Discovery.storyboard
+++ b/mia/Base.lproj/Discovery.storyboard
@@ -93,6 +93,9 @@
                                     <constraint firstAttribute="trailing" secondItem="GLh-sr-NUv" secondAttribute="trailing" id="Go5-Uo-kls"/>
                                 </constraints>
                                 <size key="customSize" width="280" height="460"/>
+                                <connections>
+                                    <outlet property="coverView" destination="GLh-sr-NUv" id="ofb-bt-JUl"/>
+                                </connections>
                             </collectionViewCell>
                         </cells>
                         <connections>
